include/El/lapack_like/factor.py


def QR(A,piv=False,factType=QR_IMPLICIT,ctrl=None):
  if type(A) is Matrix:
    if piv:
      if factType == QR_IMPLICIT:  
        t = Matrix(A.tag)
        d = Matrix(Base(A.tag))
        p = Matrix(iTag)
        if   A.tag == sTag:
          if ctrl == None:
            lib.ElQRColPivDist_s(A.obj,t.obj,d.obj,p.obj)
          else:
            lib.ElQRColPivXDist_s(A.obj,t.obj,d.obj,p.obj,ctrl)
        elif A.tag == dTag:
          if ctrl == None:
            lib.ElQRColPivDist_d(A.obj,t.obj,d.obj,p.obj)
          else:
            lib.ElQRColPivXDist_d(A.obj,t.obj,d.obj,p.obj,ctrl)
        elif A.tag == cTag:
          if ctrl == None:
            lib.ElQRColPivDist_c(A.obj,t.obj,d.obj,p.obj)
          else:
            lib.ElQRColPivXDist_c(A.obj,t.obj,d.obj,p.obj,ctrl)
        elif A.tag == zTag:
          if ctrl == None:
            lib.ElQRColPivDist_z(A.obj,t.obj,d.obj,p.obj)
          else:
            lib.ElQRColPivXDist_z(A.obj,t.obj,d.obj,p.obj,ctrl)
        else: raise Exception('Unsupported datatype')
        return t, d, p
      elif factType == QR_EXPLICIT:
        if ctrl != None: 
          raise Exception('\'ctrl\' not yet supported for explicit piv fact\'s')
        R = Matrix(A.tag)
        P = Matrix(iTag)
        if   A.tag == sTag: lib.ElQRColPivExplicit_s(A.obj,R.obj,P.obj)
        elif A.tag == dTag: lib.ElQRColPivExplicit_d(A.obj,R.obj,P.obj)
        elif A.tag == cTag: lib.ElQRColPivExplicit_c(A.obj,R.obj,P.obj)
        elif A.tag == zTag: lib.ElQRColPivExplicit_z(A.obj,R.obj,P.obj)
        else: raise Exception('Unsupported datatype')
        return R, P
      else: 
        raise Exception('Partial pivoted explicit fact\'s not yet supported')
    else:
      if factType == QR_IMPLICIT:
        t = Matrix(A.tag)
        d = Matrix(Base(A.tag))
        if   A.tag == sTag: lib.ElQR_s(A.obj,t.obj,d.obj)
        elif A.tag == dTag: lib.ElQR_d(A.obj,t.obj,d.obj)
        elif A.tag == cTag: lib.ElQR_c(A.obj,t.obj,d.obj)
        elif A.tag == zTag: lib.ElQR_z(A.obj,t.obj,d.obj)
        else: raise Exception('Unsupported datatype')
        return t, d
      elif factType == QR_EXPLICIT:
        R = Matrix(A.tag)
        if   A.tag == sTag: lib.ElQRExplicit_s(A.obj,R.obj)
        elif A.tag == dTag: lib.ElQRExplicit_d(A.obj,R.obj)
        elif A.tag == cTag: lib.ElQRExplicit_c(A.obj,R.obj)
        elif A.tag == zTag: lib.ElQRExplicit_z(A.obj,R.obj)
        else: raise Exception('Unsupported datatype')
        return R
      elif factType == QR_EXPLICIT_TRIANG:
        if   A.tag == sTag: lib.ElQRExplicitTriang_s(A.obj)
        elif A.tag == dTag: lib.ElQRExplicitTriang_d(A.obj)
        elif A.tag == cTag: lib.ElQRExplicitTriang_c(A.obj)
        elif A.tag == zTag: lib.ElQRExplicitTriang_z(A.obj)
        else: raise Exception('Unsupported datatype')
      elif factType == QR_EXPLICIT_UNITARY:
        if   A.tag == sTag: lib.ElQRExplicitUnitary_s(A.obj)
        elif A.tag == dTag: lib.ElQRExplicitUnitary_d(A.obj)
        elif A.tag == cTag: lib.ElQRExplicitUnitary_c(A.obj)
        elif A.tag == zTag: lib.ElQRExplicitUnitary_z(A.obj)
        else: raise Exception('Unsupported datatype')
      else: raise Exception('Unsupported QR factorization type')
  elif type(A) is DistMatrix:
    if piv:
      if factType == QR_IMPLICIT:  
        t = DistMatrix(A.tag,MC,STAR,A.Grid())
        d = DistMatrix(Base(A.tag),MC,STAR,A.Grid())
        p = DistMatrix(iTag,MC,STAR,A.Grid())
        if   A.tag == sTag:
          if ctrl == None:
            lib.ElQRColPivDist_s(A.obj,t.obj,d.obj,p.obj)
          else:
            lib.ElQRColPivXDist_s(A.obj,t.obj,d.obj,p.obj,ctrl)
        elif A.tag == dTag:
          if ctrl == None:
            lib.ElQRColPivDist_d(A.obj,t.obj,d.obj,p.obj)
          else:
            lib.ElQRColPivXDist_d(A.obj,t.obj,d.obj,p.obj,ctrl)
        elif A.tag == cTag:
          if ctrl == None:
            lib.ElQRColPivDist_c(A.obj,t.obj,d.obj,p.obj)
          else:
            lib.ElQRColPivXDist_c(A.obj,t.obj,d.obj,p.obj,ctrl)
        elif A.tag == zTag:
          if ctrl == None:
            lib.ElQRColPivDist_z(A.obj,t.obj,d.obj,p.obj)
          else:
            lib.ElQRColPivXDist_z(A.obj,t.obj,d.obj,p.obj,ctrl)
        else: raise Exception('Unsupported datatype')
        return t, d, p
      elif factType == QR_EXPLICIT:
        if ctrl != None: 
          raise Exception('\'ctrl\' not yet supported for explicit piv fact\'s')
        R = DistMatrix(A.tag,MC,MR,A.Grid())
        P = DistMatrix(iTag,MC,MR,A.Grid())
        if   A.tag == sTag: lib.ElQRColPivExplicitDist_s(A.obj,R.obj,P.obj)
        elif A.tag == dTag: lib.ElQRColPivExplicitDist_d(A.obj,R.obj,P.obj)
        elif A.tag == cTag: lib.ElQRColPivExplicitDist_c(A.obj,R.obj,P.obj)
        elif A.tag == zTag: lib.ElQRColPivExplicitDist_z(A.obj,R.obj,P.obj)
        else: raise Exception('Unsupported datatype')
        return R, P
      else: 
        raise Exception('Partial pivoted explicit fact\'s not yet supported')
    else:
      if factType == QR_IMPLICIT:
        t = DistMatrix(A.tag,MC,STAR,A.Grid())
        d = DistMatrix(Base(A.tag),MC,STAR,A.Grid())
        if   A.tag == sTag: lib.ElQRDist_s(A.obj,t.obj,d.obj)
        elif A.tag == dTag: lib.ElQRDist_d(A.obj,t.obj,d.obj)
        elif A.tag == cTag: lib.ElQRDist_c(A.obj,t.obj,d.obj)
        elif A.tag == zTag: lib.ElQRDist_z(A.obj,t.obj,d.obj)
        else: raise Exception('Unsupported datatype')
        return t, d
      elif factType == QR_EXPLICIT:
        R = Matrix(A.tag)
        if   A.tag == sTag: lib.ElQRExplicitDist_s(A.obj,R.obj)
        elif A.tag == dTag: lib.ElQRExplicitDist_d(A.obj,R.obj)
        elif A.tag == cTag: lib.ElQRExplicitDist_c(A.obj,R.obj)
        elif A.tag == zTag: lib.ElQRExplicitDist_z(A.obj,R.obj)
        else: raise Exception('Unsupported datatype')
        return R
      elif factType == QR_EXPLICIT_TRIANG:
        if   A.tag == sTag: lib.ElQRExplicitTriangDist_s(A.obj)
        elif A.tag == dTag: lib.ElQRExplicitTriangDist_d(A.obj)
        elif A.tag == cTag: lib.ElQRExplicitTriangDist_c(A.obj)
        elif A.tag == zTag: lib.ElQRExplicitTriangDist_z(A.obj)
        else: raise Exception('Unsupported datatype')
      elif factType == QR_EXPLICIT_UNITARY:
        if   A.tag == sTag: lib.ElQRExplicitUnitaryDist_s(A.obj)
        elif A.tag == dTag: lib.ElQRExplicitUnitaryDist_d(A.obj)
        elif A.tag == cTag: lib.ElQRExplicitUnitaryDist_c(A.obj)
        elif A.tag == zTag: lib.ElQRExplicitUnitaryDist_z(A.obj)
        else: raise Exception('Unsupported datatype')
      else: raise Exception('Unsupported QR factorization type')
  else: raise Exception('Unsupported matrix type')

lib.ElCholeskyQR_s.argtypes = [c_void_p,c_void_p]
lib.ElCholeskyQR_s.restype = c_uint
lib.ElCholeskyQR_d.argtypes = [c_void_p,c_void_p]
lib.ElCholeskyQR_d.restype = c_uint
lib.ElCholeskyQR_c.argtypes = [c_void_p,c_void_p]
lib.ElCholeskyQR_c.restype = c_uint
lib.ElCholeskyQR_z.argtypes = [c_void_p,c_void_p]
lib.ElCholeskyQR_z.restype = c_uint
lib.ElCholeskyQRDist_s.argtypes = [c_void_p,c_void_p]
lib.ElCholeskyQRDist_s.restype = c_uint
lib.ElCholeskyQRDist_d.argtypes = [c_void_p,c_void_p]
lib.ElCholeskyQRDist_d.restype = c_uint
lib.ElCholeskyQRDist_c.argtypes = [c_void_p,c_void_p]
lib.ElCholeskyQRDist_c.restype = c_uint
lib.ElCholeskyQRDist_z.argtypes = [c_void_p,c_void_p]
lib.ElCholeskyQRDist_z.restype = c_uint
def CholeskyQR(A):
  if type(A) is Matrix:
    R = Matrix(A.tag)
    if   A.tag == sTag: lib.ElCholeskyQR_s(A.obj,R.obj)
    elif A.tag == dTag: lib.ElCholeskyQR_d(A.obj,R.obj)
    elif A.tag == cTag: lib.ElCholeskyQR_c(A.obj,R.obj)
    elif A.tag == zTag: lib.ElCholeskyQR_z(A.obj,R.obj)
    else: raise Exception('Unsupported datatype')
    return R
  elif type(A) is DistMatrix:
    R = DistMatrix(A.tag,STAR,STAR,A.Grid())
    if   A.tag == sTag: lib.ElCholeskyQRDist_s(A.obj,R.obj)
    elif A.tag == dTag: lib.ElCholeskyQRDist_d(A.obj,R.obj)
    elif A.tag == cTag: lib.ElCholeskyQRDist_c(A.obj,R.obj)
    elif A.tag == zTag: lib.ElCholeskyQRDist_z(A.obj,R.obj)
    else: raise Exception('Unsupported datatype')
    return R
  else: raise Exception('Unsupported matrix type')

lib.ElApplyQAfterQR_s.argtypes = \
  [c_uint,c_uint,c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElApplyQAfterQR_s.restype = c_uint
lib.ElApplyQAfterQR_d.argtypes = \
  [c_uint,c_uint,c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElApplyQAfterQR_d.restype = c_uint
lib.ElApplyQAfterQR_c.argtypes = \
  [c_uint,c_uint,c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElApplyQAfterQR_c.restype = c_uint
lib.ElApplyQAfterQR_z.argtypes = \
  [c_uint,c_uint,c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElApplyQAfterQR_z.restype = c_uint
lib.ElApplyQAfterQRDist_s.argtypes = \
  [c_uint,c_uint,c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElApplyQAfterQRDist_s.restype = c_uint
lib.ElApplyQAfterQRDist_d.argtypes = \
  [c_uint,c_uint,c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElApplyQAfterQRDist_d.restype = c_uint
lib.ElApplyQAfterQRDist_c.argtypes = \
  [c_uint,c_uint,c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElApplyQAfterQRDist_c.restype = c_uint
lib.ElApplyQAfterQRDist_z.argtypes = \
  [c_uint,c_uint,c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElApplyQAfterQRDist_z.restype = c_uint
def ApplyQAfterQR(side,orient,A,t,d,B):
  if type(A) is not type(t) or type(t) is not type(d) or type(d) is not type(B):
    raise Exception('Matrix types of {A,t,d,B} must match')
  if A.tag != t.tag or t.tag != B.tag:
    raise Exception('Datatypes of {A,t,B} must match')
  if d.tag != Base(A.tag):
    raise Exception('Base type of A must match that of d')
  if type(A) is Matrix:
    if   A.tag == sTag:
      lib.ElApplyQAfterQR_s(side,orient,A.tag,t.tag,d.tag,B.tag)
    elif A.tag == dTag:
      lib.ElApplyQAfterQR_d(side,orient,A.tag,t.tag,d.tag,B.tag)
    elif A.tag == cTag:
      lib.ElApplyQAfterQR_c(side,orient,A.tag,t.tag,d.tag,B.tag)
    elif A.tag == zTag:
      lib.ElApplyQAfterQR_z(side,orient,A.tag,t.tag,d.tag,B.tag)
    else: raise Exception('Unsupported datatype')
  elif type(A) is DistMatrix:
    if   A.tag == sTag:
      lib.ElApplyQAfterQRDist_s(side,orient,A.tag,t.tag,d.tag,B.tag)
    elif A.tag == dTag:
      lib.ElApplyQAfterQRDist_d(side,orient,A.tag,t.tag,d.tag,B.tag)
    elif A.tag == cTag:
      lib.ElApplyQAfterQRDist_c(side,orient,A.tag,t.tag,d.tag,B.tag)
    elif A.tag == zTag:
      lib.ElApplyQAfterQRDist_z(side,orient,A.tag,t.tag,d.tag,B.tag)
    else: raise Exception('Unsupported datatype')
  else: raise Exception('Unsupported matrix type')

# TODO: TSQR
# TODO: ExplicitTSQR

# RQ factorization
# ================
(RQ_IMPLICIT,RQ_EXPLICIT,RQ_EXPLICIT_TRIANG,RQ_EXPLICIT_UNITARY)=(0,1,2,3)
